--- a/databinging/webapp/index.html
+++ b/databinging/webapp/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta charset="utf-8">
+	<meta charset="utf-8"> 
 	<title>SAPUI5 Data Binding Tutorial</title>
 	<script
 		id="sap-ui-bootstrap"
-		src="../../../../../../../../../resources/sap-ui-core.js"
+		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_bluecrystal"
 		data-sap-ui-libs="sap.m"
 		data-sap-ui-compatVersion="edge"
@@ -26,7 +26,13 @@
 					city: "Walldorf",
 					zip: "69190",
 					country: "Germany"
-				 }
+				 },
+		        address   : {
+				street : "Dietmar-Hopp-Allee 16",
+				city : "Walldorf",
+				zip : "69190",
+				country : "Germany"
+			   }
 			});
  
 			// Assign the model object to the SAPUI5 core
